--- a/eComm_Reporting_Application.csproj
+++ b/eComm_Reporting_Application.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap.chosen" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="3.1.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
